Changed button names.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Links</title>
+    <title>Live Dashboards Hub</title>
 </head>
 <body>
     <h1>Button Links</h1>
-    <button onclick="window.location.href='compare 2 stocks/index.html'">Visit Website 1</button>
-    <button onclick="window.location.href='currency+field charts'">Visit Website 2</button>
-    <button onclick="window.location.href='stock prices'">Visit Website 3</button>
-    <button onclick="window.location.href='pie chart'">Visit Website 4</button>
+    <button onclick="window.location.href='compare 2 stocks/index.html'">Visit Dashboard 1</button>
+    <button onclick="window.location.href='currency+field charts'">Visit Dashboard 2</button>
+    <button onclick="window.location.href='stock prices'">Visit Dashboard 3</button>
+    <button onclick="window.location.href='pie chart'">Visit Dashboard 4</button>
 </body>
 </html>
